backported pre4 changes